--- a/index.html
+++ b/index.html
@@ -4,18 +4,151 @@
     <link rel="stylesheet" href="reset.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <title>titre</title>
+    <link rel="stylesheet" href="style6.css" />
+    <script src="https://kit.fontawesome.com/5b728fbfb7.js" crossorigin="anonymous"></script>
+    <title>CV Prénom Nom</title>
 </head>
-<body>
-    <header>
-
-    </header>
-    <main>
-
+<body>    
+    <header class="container">
+        <figure>
+            <img src="https://via.placeholder.com/190x190" alt="photo prénom nom" />
+        </figure>
+        <div class="title">
+            <h1><span>JESSICA</span> LEROY</h1>
+            <h2><span>Dével</span>oppeuse web freelance</h2>
+        </div>
+    </header>    
+    <main class="container">
+        <div class="aside">            
+            <section>
+                <h3>CONTACT</h3>
+                <div class="contact">
+                    <p>Adresse<br>Paris, France</p>
+                    <p>Téléphone<br>06 00 00 00 00</p>
+                    <p>Email<br>nom@email.com</p>
+                    <p>Site web<br>www.name.com</p>
+                    <p>Skype<br>@nom_dutilisateur</p>
+                </div>
+            </section>            
+            <section>
+                <h3>Á PROPOS DE MOI</h3>
+                <div class="propos">
+                    <p>Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit. Fusce 
+                    eleifend, diam vitae faucibus varius, 
+                    neque lectus viverra justo, eget 
+                    pharetra felis massa sit amet lacus. 
+                    Nam pulvinar est vel diam 
+                    pellentesque suscipit. Fusce mollis, 
+                    ligula id tincidunt volutpat, erat ante 
+                    porttitor nisi, id bibendum eros 
+                    metus at nisi. Morbi sed ligula 
+                    dolor. Fusce mollis, ligula id 
+                    tincidunt volutpat, erat ante 
+                    porttitor nisi, id bibendum eros 
+                    metus at nisi. Morbi sed ligula 
+                    dolor.</p>
+                </div>
+            </section>
+            <section>
+                <h3>LOISIRS</h3>
+                <div class="loisirs">
+                    <img src="https://via.placeholder.com/60x60" />
+                    <img src="https://via.placeholder.com/60x60" />
+                    <img src="https://via.placeholder.com/60x60" />
+                </div>
+            </section>        
+        </div>
+        <div class="content">
+            <section class="formation">
+                <h3><i class="fas fa-graduation-cap"></i>FORMATION</h3>
+                <div class="article">
+                    <aside>
+                        <i class="far fa-dot-circle"></i>
+                        <p>2016 - 2017<br>Paris</p>
+                    </aside>
+                    <article>
+                        <h4>OPENCLASSROOMS</h4>
+                        <h5>Junior Web Developer</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Fusce eleifend, diam vitae faucibus varius, neque lectus
+                            viverra justo, eget pharetra felis massa sit amet lacus.</p>
+                    </article>
+                </div>
+                <div class="article">
+                    <aside>
+                        <i class="fas fa-circle"></i>
+                        <p>2014 - 2016<br>Orléans</p>
+                    </aside>
+                    <article>
+                        <h4>UNIVERSITY OF LOREM</h4>
+                        <h5>Graphic Designer</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Fusce eleifend, diam vitae faucibus varius, neque lectus
+                            viverra justo, eget pharetra felis massa sit amet lacus.</p>
+                    </article>
+                </div>
+            </section>
+            <section class="experience">
+                <h3><i class="fas fa-briefcase"></i>EXPÉRIENCE PROFESSIONNELLE</h3>
+                <div class="article">
+                    <aside>
+                        <i class="far fa-dot-circle"></i>
+                        <p>Mars 2018 - Poste actuel<br>Paris</p>
+                    </aside>
+                    <article>
+                        <h4>DESIGN INC.</h4>
+                        <h5>Web Developer</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Fusce eleifend, diam vitae faucibus varius, neque lectus
+                            viverra justo, eget pharetra felis massa sit amet lacus.</p>
+                    </article>
+                </div>
+                <div class="article">
+                    <aside>
+                        <i class="fas fa-circle"></i>
+                        <p>Mars 2018 - Poste actuel<br>Paris</p>
+                    </aside>
+                    <article>
+                        <h4>DESIGN INC.</h4>
+                        <h5>Web Developer</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Fusce eleifend, diam vitae faucibus varius, neque lectus
+                            viverra justo, eget pharetra felis massa sit amet lacus.</p>
+                    </article>
+                </div>
+                <div class="article">
+                    <aside>
+                        <i class="fas fa-circle"></i>
+                        <p>Mars 2018 - Poste actuel<br>Paris</p>
+                    </aside>
+                    <article>
+                        <h4>DESIGN INC.</h4>
+                        <h5>Web Developer</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Fusce eleifend, diam vitae faucibus varius, neque lectus
+                            viverra justo, eget pharetra felis massa sit amet lacus.</p>
+                    </article>
+                </div>
+            </section>
+            <section class="recommandation">
+                <h3><i class="fas fa-pencil-alt"></i>RECOMMANDATIONS</h3>
+                <div class="reco">
+                    <article>
+                        <h5>PRENOM NOM</h5>
+                        <p>Fonction, Agence<br>
+                        Téléphone : 06.00.00.00.00<br>
+                        Email : name@email.com</p>
+                    </article>
+                    <article>
+                        <h5>PRENOM NOM</h5>
+                        <p>Fonction, Agence<br>
+                        Téléphone : 06.00.00.00.00<br>
+                        Email : name@email.com</p>
+                    </article>
+                </div>
+            </section>        
+        </div>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
