--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="reset.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style6.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/5b728fbfb7.js" crossorigin="anonymous"></script>
     <title>CV Prénom Nom</title>
 </head>
